week 10 coupon user done

--- a/views/admin/usermanagement.ejs
+++ b/views/admin/usermanagement.ejs
@@ -236,13 +236,13 @@
                   <input type="text" class="form-control" placeholder="Search users">
                   <button style="height: 33px;margin: 3px 0px 0px 10px;" class="btn btn-primary">Search</button>
                 </form>
-                <table class="table">
+                <table class="table" style="color: white;">
                   <thead>
                     <tr>
-                      <th> Username</th>
-                      <th> Email</th>
-                      <th> Ban </th>
-                      <th> View</th>
+                      <th style="color: white; "> USERNAME</th>
+                      <th style="color: white; "> EMAIL</th>
+                      <th style="color: white; "> BAN </th>
+                      <th style="color: white; "> VIEW</th>
 
                     </tr>
                   </thead>
@@ -264,7 +264,7 @@
                           </td>
                           <td>
                             <button data-id="<%= value.email  %>"
-                              class="badge badge-outline-warning btn-view">View</button>
+                              class="badge badge-outline-warning btn-view" >View</button>
                           </td>
                         </tr>
                         <% } %>
