--- a/views/users/layouts/header.ejs
+++ b/views/users/layouts/header.ejs
@@ -30,9 +30,8 @@
 
       <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
         <li>
-          <a href="/wishlist">
-            <a href="/wishlist"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a>        
-          </a>
+            <a href="/wishlist"><img src="/images/img/The new whish list/wishlist.png" style="margin-top: 13px; margin-right: 10px;" alt="whislist"></a>        
+          
         </li>
         <li>
           <a class="nav-link" href="#"><img src="/images/user.svg" /></a>
