week 10 offer on progress

--- a/views/admin/Editordermanagement.ejs
+++ b/views/admin/Editordermanagement.ejs
@@ -49,6 +49,11 @@
             <span class="menu-title">Coupen Management</span>
           </a>
         </li>
+        <li class="nav-item menu-items">
+          <a class="nav-link" href="/admin/offermanagement">
+            <span class="menu-title">Offer Management</span>
+          </a>
+        </li>
       </ul>
     </nav>
 
