--- a/views/users/shop.ejs
+++ b/views/users/shop.ejs
@@ -208,7 +208,7 @@
     <section class="container-fluid shopcontainer">
       <div class="product-grid">
         <div class="row">
-          <% if (products && products.length> 0) { %>
+          <% if (products && products.length > 0) { %>
             <% products.forEach(function(product) { %>
               <div class="col-md-3 col-sm-6 mb-4">
                 <div class="product-card">
@@ -217,22 +217,26 @@
                       <img src="/<%= product.images[0] %>" alt="<%= product.name %>" class="img-fluid product-image">
                     </a>
                     <div class="icon-overlay">
-                      <i class="fa fa-heart wishlist-icon" title="Add to Wishlist"
-                        onclick="toggleIconColor(this, 'wishlist')"></i>
-                      <i class="fa fa-shopping-cart add-cart-icon" title="Add to Cart"
-                        onclick="toggleIconColor(this, 'cart')"></i>
+                      <i class="fa fa-heart wishlist-icon" title="Add to Wishlist" onclick="toggleIconColor(this, 'wishlist')"></i>
+                      <i class="fa fa-shopping-cart add-cart-icon" title="Add to Cart" onclick="toggleIconColor(this, 'cart')"></i>
                     </div>
                   </div>
                   <p class="product-name">
                     <%= product.name %>
                   </p>
-                  <span class="product-price">₹<%= product.offerPrice ? product.offerPrice : product.price %></span>
+                  <span class="product-price">
+                    ₹<%= product.offerPrice ? product.offerPrice : product.price %>
+                    <% if (product.offerPercentage) { %>
+                      <small>(<%= product.offerPercentage %>% OFF)</small>
+                    <% } %>
+                  </span>
                 </div>
               </div>
-              <% }); %>
-                <% } else { %>
-                  <p>No products found.</p>
-                  <% } %>
+            <% }); %>
+          <% } else { %>
+            <p>No products found.</p>
+          <% } %>
+          
         </div>
       </div>
     </section>
